scenarios/network-policy-block/manifests/deny-all-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: demo-frontend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
